--- a/IMAGENES/index.html
+++ b/IMAGENES/index.html
@@ -19,7 +19,7 @@
 <img src="/IMAGENES/FOTOS/IMG_20220831_081042363.jpg" height="50%" width="100%"
 <h2>Esperando a la toxica😐</h2>
 </center>
-<body bgcolor="yellow">
+<body bgcolor="purple">
 
 </body>
 
